# vrc-auto-inviter

./: Cargo.toml  LICENSE  README.md  config.toml
src/: main.rs
